--- a/InterfaceObject/Server/src/DIOCPTCPServer.dproj
+++ b/InterfaceObject/Server/src/DIOCPTCPServer.dproj
@@ -109,18 +109,18 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="F_whtxServerMain.pas">
-            <Form>frmDIOCPTcpServer</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="U_DIOCPStreamCoder.pas"/>
-        <DCCReference Include="F_DIOCPMMonitor.pas">
+        <DCCReference Include="TCPServer\F_DIOCPMMonitor.pas">
             <Form>FMMonitor</Form>
             <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
-        <DCCReference Include="U_RunTimeINfoTools.pas"/>
-        <DCCReference Include="U_MyTCPClientContext.pas"/>
+        <DCCReference Include="TCPServer\F_whtxServerMain.pas">
+            <Form>frmDIOCPTcpServer</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="TCPServer\U_DIOCPStreamCoder.pas"/>
+        <DCCReference Include="TCPServer\U_MyTCPClientContext.pas"/>
+        <DCCReference Include="TCPServer\U_RunTimeINfoTools.pas"/>
         <RcItem Include="Server.ico">
             <ResourceType>ICON</ResourceType>
             <ResourceId>Icon_1</ResourceId>
@@ -151,7 +151,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="Win32\Debug\DIOCPTCPServer.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\bin\DIOCPTCPServer.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>DIOCPTCPServer.exe</RemoteName>
                         <Overwrite>true</Overwrite>
