Server Interface Complate

--- a/InterfaceObject/Client/bin/DIOCPTcpClient.ini
+++ b/InterfaceObject/Client/bin/DIOCPTcpClient.ini
@@ -1,7 +1,7 @@
 [ServerInfo]
-;接口服务IP地址
+;锟接口凤拷锟斤拷IP锟斤拷址
 IP = 127.0.0.1
-;端口
-Port = 9983
-;TCP客户端发送超时时间（单位分钟）
+;锟剿匡拷
+Port = 8923
+;TCP锟酵伙拷锟剿凤拷锟酵筹拷时时锟戒（锟斤拷位锟斤拷锟接ｏ拷
 ReadTimeOut = 3
