--- a/InterfaceObject/Server/src/DIOCPTCPServer.dproj
+++ b/InterfaceObject/Server/src/DIOCPTCPServer.dproj
@@ -123,7 +123,9 @@
         <DCCReference Include="TCPServer\U_RunTimeINfoTools.pas"/>
         <DCCReference Include="IntfModule\U_EHSBInterface.pas"/>
         <DCCReference Include="IntfModule\U_TCPServerInterface.pas"/>
-        <DCCReference Include="lib\JNI.pas"/>
+        <DCCReference Include="lib\MQClass.pas"/>
+        <DCCReference Include="lib\MQI.pas"/>
+        <DCCReference Include="lib\MQIC.pas"/>
         <RcItem Include="Server.ico">
             <ResourceType>ICON</ResourceType>
             <ResourceId>Icon_1</ResourceId>
