--- a/InterfaceObject/Client/src/DIOCPTcpClient.dproj
+++ b/InterfaceObject/Client/src/DIOCPTcpClient.dproj
@@ -107,11 +107,11 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="U_GetHisInfoIntf.pas"/>
-        <DCCReference Include="U_SendInfobyTCPClient.pas"/>
+        <DCCReference Include="uSendInfoByTCPClient.pas"/>
         <DCCReference Include="uICoderSocket.pas"/>
         <DCCReference Include="uRawTcpClientCoderImpl.pas"/>
         <DCCReference Include="uStreamCoderSocket.pas"/>
+        <DCCReference Include="uGetHisInfoExpts.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -164,7 +164,7 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="Win32\Debug\DIOCPTcpClient.dll" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\bin\DIOCPTcpClient.dll" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>DIOCPTcpClient.dll</RemoteName>
                         <Overwrite>true</Overwrite>
