--- a/EvunTool/src/EvunTool.dproj
+++ b/EvunTool/src/EvunTool.dproj
@@ -114,6 +114,7 @@
         <DCCReference Include="unit\uResourceString.pas"/>
         <DCCReference Include="unit\ShShareMemMap.pas"/>
         <DCCReference Include="unit\ShThread.pas"/>
+        <DCCReference Include="unit\uShareMemServer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
