--- a/ToolKit/src/EvunTool/EvunTool.dproj
+++ b/ToolKit/src/EvunTool/EvunTool.dproj
@@ -133,10 +133,22 @@
         <DCCReference Include="vcl.dcp"/>
         <DCCReference Include="dbrtl.dcp"/>
         <DCCReference Include="QDAC3.dcp"/>
+        <DCCReference Include="RaizeComponentsVcl.dcp"/>
+        <DCCReference Include="SynEdit_R.dcp"/>
+        <DCCReference Include="dxCoreRS25.dcp"/>
+        <DCCReference Include="cxLibraryRS25.dcp"/>
+        <DCCReference Include="dxGDIPlusRS25.dcp"/>
+        <DCCReference Include="dxThemeRS25.dcp"/>
+        <DCCReference Include="vclimg.dcp"/>
+        <DCCReference Include="VirtualTreesR.dcp"/>
         <DCCReference Include="form\EvunToolfrm.pas">
-            <Form>panel</Form>
+            <Form>frmEvunTool</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="unit\ShShareMemMap.pas"/>
+        <DCCReference Include="unit\ShThread.pas"/>
+        <DCCReference Include="unit\uShareMemServer.pas"/>
+        <DCCReference Include="unit\uSystemModule.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
