--- a/InterfaceObject/Server/bin/DIOCPTcpServer.ini
+++ b/InterfaceObject/Server/bin/DIOCPTcpServer.ini
@@ -2,3 +2,17 @@
 [Server]
 ;端口
 Port = 8923
+;医慧平台  配置信息
+[ESBEntry]
+UserName = xueku
+Password = 123
+SourceSysCode = S11
+TargetSysCode = S03
+[DataBase]
+;tslab  ,100.100.73.10  sa  Abc123
+DriverName = MSSQL
+Server = 100.100.73.10
+DataBase = tslab_test
+User_Name = sa
+Password = Abc123
+Pooled = True
