--- a/Toolbox/src/Toolbox.dproj
+++ b/Toolbox/src/Toolbox.dproj
@@ -87,6 +87,7 @@
         <DCC_ExeOutput>..\debug</DCC_ExeOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <Icon_MainIcon>resource\tool.ico</Icon_MainIcon>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
