--- a/ToolKit/src/EvunTool/EvunTool.dproj
+++ b/ToolKit/src/EvunTool/EvunTool.dproj
@@ -138,6 +138,9 @@
         <DCCReference Include="JvCore.dcp"/>
         <DCCReference Include="JvStdCtrls.dcp"/>
         <DCCReference Include="YPubliclibs.dcp"/>
+        <DCCReference Include="vclFireDAC.dcp"/>
+        <DCCReference Include="FireDAC.dcp"/>
+        <DCCReference Include="RaizeComponentsVclDb.dcp"/>
         <DCCReference Include="form\EvunToolfrm.pas">
             <Form>frmEvunTool</Form>
             <FormType>dfm</FormType>
@@ -151,6 +154,11 @@
         <DCCReference Include="unit\ShThread.pas"/>
         <DCCReference Include="unit\uShareMemServer.pas"/>
         <DCCReference Include="unit\uSystemModule.pas"/>
+        <DCCReference Include="frame\DBGridDatafram.pas">
+            <Form>framDBGridData</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -197,7 +205,7 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="C:\Users\Public\Documents\Embarcadero\Studio\19.0\Bpl\EvunTool.bpl" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\..\debug\EvunTool.bpl" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>EvunTool.bpl</RemoteName>
                         <Overwrite>true</Overwrite>
