--- a/ToolKit/src/YPubliclibs/YPubliclibs.dproj
+++ b/ToolKit/src/YPubliclibs/YPubliclibs.dproj
@@ -130,8 +130,13 @@
         <DCCReference Include="vcl.dcp"/>
         <DCCReference Include="dbrtl.dcp"/>
         <DCCReference Include="QDAC3.dcp"/>
+        <DCCReference Include="SynEdit_R.dcp"/>
         <DCCReference Include="unit\uDragOnRunTime.pas"/>
         <DCCReference Include="unit\uPubliclibsBase.pas"/>
+        <DCCReference Include="form\Logfrm.pas">
+            <Form>frmLogger</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
