--- a/ToolKit/src/YPubliclibs/YPubliclibs.dproj
+++ b/ToolKit/src/YPubliclibs/YPubliclibs.dproj
@@ -131,6 +131,7 @@
         <DCCReference Include="dbrtl.dcp"/>
         <DCCReference Include="QDAC3.dcp"/>
         <DCCReference Include="SynEdit_R.dcp"/>
+        <DCCReference Include="diocpVcl.dcp"/>
         <DCCReference Include="unit\uDragOnRunTime.pas"/>
         <DCCReference Include="unit\uPubliclibsBase.pas"/>
         <DCCReference Include="form\Logfrm.pas">
