--- a/ToolKit/src/Main/ToolKit.dproj
+++ b/ToolKit/src/Main/ToolKit.dproj
@@ -114,6 +114,10 @@
             <Form>frmToolBox</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="form\VersionInfofrm.pas">
+            <Form>frmVersionInfo</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
