--- a/InterfaceObject/Server/bin/DIOCPTcpServer.ini
+++ b/InterfaceObject/Server/bin/DIOCPTcpServer.ini
@@ -16,6 +16,14 @@ DataBase = tslab_test
 User_Name = sa
 Password = Abc123
 Pooled = True
+[HIS_DATABASE]
+;tslab  ,100.100.73.10  sa  Abc123
+DriverName = MSSQL
+Server = 100.100.73.10
+DataBase = tslab_test
+User_Name = sa
+Password = Abc123
+Pooled = True
 [DateTime]
 ShortDateFormat = yyyy-mm-dd 
 DateSeparator = -
