--- a/Test/Project1.dproj
+++ b/Test/Project1.dproj
@@ -116,6 +116,15 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="ICalculateService.pas"/>
+        <DCCReference Include="..\InterfaceObject\Server\src\lib\CnDebug.pas"/>
+        <DCCReference Include="..\InterfaceObject\Server\src\lib\CnPropSheetFrm.pas">
+            <Form>CnPropSheetForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="Unit5.pas">
+            <Form>Form5</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
