--- a/server/src/InterfaceServer.dproj
+++ b/server/src/InterfaceServer.dproj
@@ -135,14 +135,9 @@
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
         <DCCReference Include="hospitalservices\ServiceFZSE.pas"/>
-        <DCCReference Include="hospitalservices\EwllMQClass\ManagerEntity.pas"/>
-        <DCCReference Include="hospitalservices\EwllMQClass\EWellMQClass.pas"/>
-        <DCCReference Include="hospitalservices\EwllMQClass\mq\MQClass.pas"/>
-        <DCCReference Include="hospitalservices\EwllMQClass\mq\MQI.pas"/>
-        <DCCReference Include="hospitalservices\EwllMQClass\mq\MQIC.pas"/>
-        <DCCReference Include="hospitalservices\EwllMQClass\EwellMqExpts.pas"/>
         <DCCReference Include="interfaces\IPythonScriptServiceIntf.pas"/>
         <DCCReference Include="datamodule\AndyDelphiPy.pas"/>
+        <DCCReference Include="hospitalservices\ServiceZXHospital.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
